<resources>
    <string name="app_name">Custom Chess</string>
    <string name="play">Play</string>
    <string name="board_editor">Board Editor</string>
    <string name="piece_editor">Piece Editor</string>
    <string name="logo">Logo</string>
    <string name="human">Human</string>
    <string name="computer">Computer</string>
    <string name="vs">● vs ○</string>
    <string name="default_board">Default Board</string>
    <string name="computer_strength">Computer strength</string>
    <string name="go">Go</string>
    <string name="create_new_board">Create new board</string>
    <string name="delete">Delete</string>
    <string name="saved_boards">Saved boards</string>
    <string name="create_new_piece">Create new piece</string>
    <string name="saved_pieces">Saved pieces</string>
    <string name="board_name">Board name</string>
    <string name="board_width">Board width</string>
    <string name="board_height">Board height</string>
    <string name="save_board">Save board</string>
	<string name="piece_name">Piece name</string>
	<string name="royal">Royal</string>
    <string name="capturable">Capturable</string>
    <string name="custom_attacks">Custom attacks</string>
    <string name="edit_moves">Edit moves</string>
    <string name="edit_attacks">Edit Attacks</string>
	<string name="set_white_sprite">Set white sprite</string>
    <string name="white_sprite">White sprite</string>
    <string name="set_black_sprite">Set black sprite</string>
    <string name="black_sprite">Black sprite</string>
	<string name="value">Value</string>
    <string name="save_piece">Save Piece</string>
	<string name="jumping">Jumping</string>
    <string name="repeating">Repeating</string>
    <string name="cancel">Cancel</string>
    <string name="help">Help</string>
    <string name="apply">Apply</string>
	<string name="delete_prompt">Delete?</string>
	<string name="royal_hint">Royal pieces, such as a regular king, are important: you lose as soon as you fail to protect one of them.</string>
    <string name="hint">i</string>
    <string name="capturable_hint">Turning this off will make it impossible for other pieces to capture this piece. A royal piece must be capturable.</string>
	<string name="custom_attacks_hint">Enabling this setting will allow you to specify the capturing moves of this piece separately from its normal moves. By default, these are the same.</string>
	<string name="piece">Piece</string>
</resources>
