<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:gravity="center"
	android:orientation="vertical"
	tools:context=".activity.MainActivity">
	
	<TextView
		style="@style/Title"
		android:text="@string/app_name"
		android:textSize="48sp" />
	
	<ImageView
		style="@style/Image"
		android:contentDescription="@string/logo"
		android:src="@drawable/chess_icon" />
	
	<LinearLayout style="@style/SettingList">
		
		<Button
			style="@style/Default"
			android:onClick="play"
			android:text="@string/play" />
		
		<Button
			style="@style/Default"
			android:onClick="boardEditor"
			android:text="@string/board_editor" />
		
		<Button
			style="@style/Default"
			android:onClick="pieceEditor"
			android:text="@string/piece_editor" />
	</LinearLayout>
</LinearLayout>