<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".activity.PieceEditorActivity">
	
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">
		
		<LinearLayout style="@style/SettingList">
			
			<EditText
				android:id="@+id/piece_name"
				style="@style/Default"
				android:autofillHints="name"
				android:hint="@string/piece_name"
				android:inputType="text"
				tools:targetApi="O" />
			
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical">
				
				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:gravity="center_vertical">
					
					<ImageButton
						style="@style/Default"
						android:layout_width="wrap_content"
						android:background="@null"
						android:contentDescription="@string/hint"
						android:onClick="showRoyalHint"
						android:src="@drawable/hint" />
					
					<Switch
						android:id="@+id/royal"
						style="@style/Default"
						android:text="@string/royal" />
				</LinearLayout>
				
				<TextView
					android:id="@+id/royal_hint"
					style="@style/Hint"
					android:text="@string/royal_hint"
					android:visibility="gone" />
			</LinearLayout>
			
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical">
				
				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:gravity="center_vertical">
					
					<ImageButton
						style="@style/Default"
						android:layout_width="wrap_content"
						android:background="@null"
						android:contentDescription="@string/hint"
						android:onClick="showCapturableHint"
						android:src="@drawable/hint" />
					
					<Switch
						android:id="@+id/capturable"
						style="@style/Default"
						android:text="@string/capturable" />
				</LinearLayout>
				
				<TextView
					android:id="@+id/capturable_hint"
					style="@style/Hint"
					android:text="@string/capturable_hint"
					android:visibility="gone" />
			</LinearLayout>
			
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical">
				
				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:gravity="center_vertical">
					
					<ImageButton
						style="@style/Default"
						android:layout_width="wrap_content"
						android:background="@null"
						android:contentDescription="@string/hint"
						android:onClick="showCustomAttacksHint"
						android:src="@drawable/hint" />
					
					<Switch
						android:id="@+id/custom_attacks"
						style="@style/Default"
						android:text="@string/custom_attacks" />
				</LinearLayout>
				
				<TextView
					android:id="@+id/custom_attacks_hint"
					style="@style/Hint"
					android:text="@string/custom_attacks_hint"
					android:visibility="gone" />
			</LinearLayout>
			
			<Button
				style="@style/Default"
				android:onClick="setMoves"
				android:text="@string/edit_moves" />
			
			<Button
				android:id="@+id/attacks"
				style="@style/Default"
				android:onClick="setAttacks"
				android:text="@string/edit_attacks" />
			
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:baselineAligned="false"
				android:orientation="horizontal">
				
				<LinearLayout
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:orientation="vertical">
					
					<Button
						style="@style/Default"
						android:onClick="setLightImage"
						android:text="@string/set_white_sprite" />
					
					<ImageView
						android:id="@+id/light_image"
						style="@style/Image"
						android:contentDescription="@string/white_sprite" />
				
				</LinearLayout>
				
				<LinearLayout
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:orientation="vertical">
					
					<Button
						style="@style/Default"
						android:onClick="setDarkImage"
						android:text="@string/set_black_sprite" />
					
					<ImageView
						android:id="@+id/dark_image"
						style="@style/Image"
						android:contentDescription="@string/black_sprite" />
				
				</LinearLayout>
			</LinearLayout>
			
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">
				
				<TextView
					style="@style/Default"
					android:layout_weight="1"
					android:text="@string/value"
					android:textAlignment="textStart" />
				
				<TextView
					android:id="@+id/value"
					style="@style/Default"
					android:layout_weight="1"
					android:textAlignment="textEnd" />
			
			</LinearLayout>
			
			<Button
				style="@style/Default"
				android:onClick="save"
				android:text="@string/save_piece" />
		</LinearLayout>
	</LinearLayout>
</ScrollView>