<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	tools:context=".activity.PieceMovesActivity">
	
	<com.tortoaster.customchess.view.PieceMovesView
		android:id="@+id/piece_moves"
		style="@style/Default" />
	
	<LinearLayout style="@style/ButtonList">
		
		<Switch
			android:id="@+id/jumping"
			style="@style/Default"
			android:onClick="setJumping"
			android:text="@string/jumping" />
		
		<Switch
			android:id="@+id/repeating"
			style="@style/Default"
			android:onClick="setRepeating"
			android:text="@string/repeating" />
		
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">
			
			<Button
				android:id="@+id/cancel"
				style="@style/Default"
				android:onClick="cancel"
				android:text="@string/cancel" />
			
			<Button
				android:id="@+id/help"
				style="@style/Default"
				android:onClick="help"
				android:text="@string/help" />
			
			<Button
				android:id="@+id/apply"
				style="@style/Default"
				android:onClick="apply"
				android:text="@string/apply" />
		</LinearLayout>
		
	</LinearLayout>

</LinearLayout>