<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".activity.BoardEditorActivity">
	
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center_horizontal"
		android:orientation="vertical">
		
		<LinearLayout style="@style/SettingList">
			
			<EditText
				android:id="@+id/board_name"
				style="@style/Default"
				android:autofillHints="name"
				android:hint="@string/board_name"
				android:inputType="text"
				tools:targetApi="O" />
			
			<TextView
				style="@style/Default"
				android:text="@string/board_width" />
			
			<SeekBar
				android:id="@+id/board_width"
				style="@style/Default"
				android:max="20"
				android:progress="4" />
			
			<TextView
				style="@style/Default"
				android:text="@string/board_height" />
			
			<SeekBar
				android:id="@+id/board_height"
				style="@style/Default"
				android:max="20"
				android:progress="4" />
		</LinearLayout>
		
		<com.tortoaster.customchess.view.BoardEditorView
			android:id="@+id/board_editor"
			style="@style/Default" />
		
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center_vertical"
			android:orientation="horizontal">
			
			<Switch
				android:id="@+id/black_white"
				style="@style/Default"
				android:layout_width="wrap_content" />
			
			<android.support.v7.widget.RecyclerView
				android:id="@+id/selector"
				style="@style/Default">
			
			</android.support.v7.widget.RecyclerView>
		
		</LinearLayout>
		
		<LinearLayout style="@style/SettingList">
			
			<Button
				style="@style/Default"
				android:onClick="save"
				android:text="@string/save_board" />
		</LinearLayout>
	
	</LinearLayout>
</ScrollView>
